[tool.poetry]
name = "pyhue"
version = "0.1.0"
description = "Pyhton utility to read Philips Hue"
authors = ["Darius Seroka <dariusjs@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
